--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,7 +12,7 @@ metadata:
     - title: Storybook
       url: https://backstage.io/storybook
     - title: Discord Chat
-      url: https://discord.com/invite/EBHEGzXfz
+      url: https://discord.com/invite/EBHEGzX
   annotations:
     github.com/project-slug: backstage/backstage
     backstage.io/techdocs-ref: dir:.
